--- a/food.html
+++ b/food.html
@@ -17,7 +17,7 @@
             <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
     <table class="table">
         <tr>
-            <td>Course to choose:</td>
+            <td>Course to choose::</td>
             <td><select class="form-control" name="" id="">
                 <option value="st">Starter</option>
                 <option value="mc">Main Course</option>
