--- a/employee.html
+++ b/employee.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <h5>EMPLOYEE REGISTRATION FORM</h5>
+    
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                <!-- As a heading -->
+<nav class="navbar bg-primary navbar-dark">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">EMPLOYEE REGISTRATION FORM</span>
+    </div>
+  </nav>
+            </div>
+        </div>
+    </div><br><br><br>
+
+    <div class="container">
+        <div class="row">
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
     <table class="table">
         <tr>
             <td>Employeee code:</td>
@@ -53,6 +69,9 @@
             <td><button class="btn btn-success">Submit</button></td>
         </tr>
     </table>
+    </div>
+    </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
